--- a/editable.html
+++ b/editable.html
@@ -15,7 +15,7 @@
 
     <style type="text/css" class="silex-style">.title {text-align: center; color: black;}section {color: red;}</style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 1085px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1608432029835-1 {width: 138px; min-height: 116px; background-color: rgb(255, 255, 255); position: absolute; top: -1.4305295944213867px; left: 345.2669372558594px;}.silex-id-1608432300829-2 {width: 200px; min-height: 50px; position: absolute; top: 8.006950378417969px; left: 734.5633010864258px;}.silex-id-1608432857713-3 {width: 260px; height: 155px; position: absolute; top: 149.14259338378906px; left: 54.000572204589844px;}.silex-id-1608432949842-7 {width: 140px; min-height: 50px; position: absolute; top: 96.29216003417969px; left: 116.99305725097656px;}.silex-id-1608433044820-9 {width: 140px; min-height: 50px; position: absolute; top: 147.0003204345703px; left: 522.0034790039062px;}.silex-id-1608433095956-10 {width: 250px; min-height: 260px; position: absolute; top: 304.3892517089844px; left: 64.14249420166016px;}.silex-id-1608433814534-11 {width: 250px; min-height: 260px; position: absolute; top: 355.167236328125px; left: 463.0364990234375px;}.silex-id-1608434122713-12 {width: 257.0486145019531px; height: 159.07986450195312px; position: absolute; top: 196px; left: 456px;}.silex-id-1608434386174-13 {width: 140px; min-height: 50px; position: absolute; top: 73.2881965637207px; left: 849.7228393554688px;}.silex-id-1608434386174-14 {width: 250px; min-height: 260px; position: absolute; top: 304.60069274902344px; left: 810.2957763671875px;}.silex-id-1608434386174-15 {width: 250px; height: 154px; position: absolute; top: 123.99305808544159px; left: 794.7228393554688px;}.silex-id-1608504298766-11 {width: 434px; min-height: 209px; background-color: transparent; position: absolute; top: 646px; left: 111px;}@media only screen and (max-width: 480px) {}</style>
+    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 1617.8992919921875px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1608432029835-1 {width: 138px; min-height: 116px; background-color: rgb(255, 255, 255); position: absolute; top: -1.4305295944213867px; left: 345.2669372558594px;}.silex-id-1608432300829-2 {width: 200px; min-height: 50px; position: absolute; top: 8.006950378417969px; left: 734.5633010864258px;}.silex-id-1608432857713-3 {width: 260px; height: 155px; position: absolute; top: 149.14259338378906px; left: 54.000572204589844px;}.silex-id-1608432949842-7 {width: 140px; min-height: 50px; position: absolute; top: 96.29216003417969px; left: 116.99305725097656px;}.silex-id-1608433044820-9 {width: 140px; min-height: 50px; position: absolute; top: 147.0003204345703px; left: 522.0034790039062px;}.silex-id-1608433095956-10 {width: 250px; min-height: 260px; position: absolute; top: 304.3892517089844px; left: 64.14249420166016px;}.silex-id-1608433814534-11 {width: 250px; min-height: 260px; position: absolute; top: 355.167236328125px; left: 463.0364990234375px;}.silex-id-1608434122713-12 {width: 257.0486145019531px; height: 159.07986450195312px; position: absolute; top: 196px; left: 456px;}.silex-id-1608434386174-13 {width: 140px; min-height: 50px; position: absolute; top: 73.2881965637207px; left: 849.7228393554688px;}.silex-id-1608434386174-14 {width: 250px; min-height: 260px; position: absolute; top: 304.60069274902344px; left: 810.2957763671875px;}.silex-id-1608434386174-15 {width: 250px; height: 154px; position: absolute; top: 123.99305808544159px; left: 794.7228393554688px;}.silex-id-1608504298766-11 {width: 434px; min-height: 209px; background-color: transparent; position: absolute; top: 646px; left: 111px;}.silex-id-1608504757063-12 {width: 400px; min-height: 400px; background-color: transparent; position: absolute; top: 1187.0464782714844px; left: 494.4306411743164px;}@media only screen and (max-width: 480px) {}</style>
     <title></title>
     
 
@@ -122,4 +122,27 @@
   })();
 </script>
 </div></div></div>
-    </div></body></html>
+    </div><div data-silex-type="html-element" class="editable-style html-element silex-id-1608504757063-12 page-page-1 paged-element silex-component-form silex-use-height-not-minheight silex-element-content-full-height" data-silex-id="silex-id-1608504757063-12" style=""><div class="silex-element-content"><form id="id_1608504757192_456" action="https://formspree.io/your@email.com" method="POST">
+  
+  <div>
+    <label for="field1">Name</label>
+    <input type="text" required="" id="field1" name="field1" placeholder="Your name">
+  </div>
+  
+  
+  <div>
+    <label for="field2">Your email adress</label>
+    <input type="text" required="" id="field2" name="field2" placeholder="your@email.com">
+  </div>
+  
+  
+  <div class="fill-vertical">
+    <label for="field3">Your message</label>
+    <textarea required="" id="field3" name="field3" placeholder="What you have to say"></textarea>
+  </div>
+  
+  <input type="submit" value="Send">
+</form>
+<style>#id_1608504757192_456 input[type=text], select {width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; border-radius: 3px; box-sizing: border-box;}#id_1608504757192_456 input[type=submit] {width: 100%; background-color: #4CAF50; color: #FFFFFF; padding: 14px 20px; margin: 8px 0; border: 1px solid #4CAF50; border-radius: 3px; cursor: pointer;}#id_1608504757192_456 label {color: #000000;}#id_1608504757192_456 .fill-vertical {flex: 1 1 auto; display: flex; flex-direction: column;}#id_1608504757192_456 .fill-vertical textarea {flex: 1 1 auto; width: 100%; height: 150px; padding: 12px 20px; box-sizing: border-box; border: 2px solid #ccc; border-radius: 3px; background-color: #f8f8f8; font-size: 16px; resize: none;}#id_1608504757192_456 {border-radius: 3px; display: flex; flex-direction: column; justify-content: space-between; height: 100%;}</style>
+
+</div></div></body></html>
