--- a/editable.html
+++ b/editable.html
@@ -15,7 +15,7 @@
 
     <style type="text/css" class="silex-style">.title {text-align: center; color: black;}section {color: red;}</style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 1617.8992919921875px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1608432029835-1 {width: 138px; min-height: 116px; background-color: rgb(255, 255, 255); position: absolute; top: -1.4305295944213867px; left: 345.2669372558594px;}.silex-id-1608432300829-2 {width: 200px; min-height: 50px; position: absolute; top: 8.006950378417969px; left: 734.5633010864258px;}.silex-id-1608432857713-3 {width: 260px; height: 155px; position: absolute; top: 149.14259338378906px; left: 54.000572204589844px;}.silex-id-1608432949842-7 {width: 140px; min-height: 50px; position: absolute; top: 96.29216003417969px; left: 116.99305725097656px;}.silex-id-1608433044820-9 {width: 140px; min-height: 50px; position: absolute; top: 147.0003204345703px; left: 522.0034790039062px;}.silex-id-1608433095956-10 {width: 250px; min-height: 260px; position: absolute; top: 304.3892517089844px; left: 64.14249420166016px;}.silex-id-1608433814534-11 {width: 250px; min-height: 260px; position: absolute; top: 355.167236328125px; left: 463.0364990234375px;}.silex-id-1608434122713-12 {width: 257.0486145019531px; height: 159.07986450195312px; position: absolute; top: 196px; left: 456px;}.silex-id-1608434386174-13 {width: 140px; min-height: 50px; position: absolute; top: 73.2881965637207px; left: 849.7228393554688px;}.silex-id-1608434386174-14 {width: 250px; min-height: 260px; position: absolute; top: 304.60069274902344px; left: 810.2957763671875px;}.silex-id-1608434386174-15 {width: 250px; height: 154px; position: absolute; top: 123.99305808544159px; left: 794.7228393554688px;}.silex-id-1608504298766-11 {width: 433px; min-height: 208px; background-color: rgba(211,13,43,1); position: absolute; top: 646.9930419921875px; left: 269.98956871032715px; opacity: 0.8;}.silex-id-1608504757063-12 {width: 400px; min-height: 400px; background-color: transparent; position: absolute; top: 1187.0464782714844px; left: 494.4306411743164px;}@media only screen and (max-width: 480px) {}</style>
+    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 1617.8992919921875px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1608432029835-1 {width: 138px; min-height: 116px; background-color: rgb(255, 255, 255); position: absolute; top: -1.4305295944213867px; left: 345.2669372558594px;}.silex-id-1608432300829-2 {width: 200px; min-height: 50px; position: absolute; top: 8.006950378417969px; left: 734.5633010864258px;}.silex-id-1608432857713-3 {width: 260px; height: 155px; position: absolute; top: 149.14259338378906px; left: 54.000572204589844px;}.silex-id-1608432949842-7 {width: 140px; min-height: 50px; position: absolute; top: 96.29216003417969px; left: 116.99305725097656px;}.silex-id-1608433044820-9 {width: 140px; min-height: 50px; position: absolute; top: 147.0003204345703px; left: 522.0034790039062px;}.silex-id-1608433095956-10 {width: 250px; min-height: 260px; position: absolute; top: 304.3892517089844px; left: 64.14249420166016px;}.silex-id-1608433814534-11 {width: 250px; min-height: 260px; position: absolute; top: 355.167236328125px; left: 463.0364990234375px;}.silex-id-1608434122713-12 {width: 257.0486145019531px; height: 159.07986450195312px; position: absolute; top: 196px; left: 456px;}.silex-id-1608434386174-13 {width: 140px; min-height: 50px; position: absolute; top: 73.2881965637207px; left: 849.7228393554688px;}.silex-id-1608434386174-14 {width: 250px; min-height: 260px; position: absolute; top: 304.60069274902344px; left: 810.2957763671875px;}.silex-id-1608434386174-15 {width: 250px; height: 154px; position: absolute; top: 123.99305808544159px; left: 794.7228393554688px;}.silex-id-1608504298766-11 {width: 433px; min-height: 208px; background-color: rgba(211,13,43,1); position: absolute; top: 646.9930419921875px; left: 269.98956871032715px; opacity: 0.8;}.silex-id-1608504757063-12 {width: 400px; min-height: 400px; background-color: transparent; position: absolute; top: 1187.0464782714844px; left: 494.4306411743164px;}.silex-id-1608505022767-13 {width: 400px; min-height: 50px; background-color: transparent; position: absolute; top: 759.9895629882812px; left: 749px;}@media only screen and (max-width: 480px) {}</style>
     <title></title>
     
 
@@ -129,6 +129,44 @@
     initUnslider();
   })();
 </script>
+</div></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1608505022767-13 page-page-1 paged-element silex-component-share" data-silex-id="silex-id-1608505022767-13" style=""><div class="silex-element-content">
+<ul class="share-buttons" id="id_1608505064572_371">
+  
+  <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://yoursite.com&amp;t=Your site title" title="Share on Facebook" target="_blank"><img alt="Share on Facebook" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Facebook.png"></a></li>
+  
+  
+  <li><a href="https://twitter.com/intent/tweet?source=http://yoursite.com&amp;text=Your site title:%20http://yoursite.com&amp;via=silexlabs" target="_blank" title="Share on Twitter"><img alt="Twitt" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Twitter.png"></a></li>
+  
+  
+  <li><a href="https://plus.google.com/share?url=http://yoursite.com" target="_blank" title="Share on Google+"><img alt="Share on Google+" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Google%2B.png"></a></li>
+  
+  
+  <li><a href="http://www.tumblr.com/share?v=3&amp;u=http://yoursite.com&amp;t=Your site title&amp;s=" target="_blank" title="Post to Tumblr"><img alt="Post to Tumblr" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Tumblr.png"></a></li>
+  
+  
+  <li><a href="http://pinterest.com/pin/create/button/?url=http://yoursite.com&amp;description=Your site description" target="_blank" title="Pin it"><img alt="Pin it" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Pinterest.png"></a></li>
+  
+  
+  <li><a href="https://getpocket.com/save?url=http://yoursite.com&amp;title=Your site title" target="_blank" title="Add to Pocket"><img alt="Add to Pocket" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Pocket.png"></a></li>
+  
+  
+  <li><a href="http://www.reddit.com/submit?url=http://yoursite.com&amp;title=Your site title" target="_blank" title="Submit to Reddit"><img alt="Submit to Reddit" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Reddit.png"></a></li>
+  
+  
+  <li><a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://yoursite.com&amp;title=Your site title&amp;summary=Your site description&amp;source=http://yoursite.com" target="_blank" title="Share on LinkedIn"><img alt="Share on LinkedIn" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/LinkedIn.png"></a></li>
+  
+  
+  <li><a href="http://wordpress.com/press-this.php?u=http://yoursite.com&amp;t=Your site title&amp;s=Your site description" target="_blank" title="Publish on WordPress"><img alt="Publish on WordPress" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Wordpress.png"></a></li>
+  
+  
+  <li><a href="https://pinboard.in/popup_login/?url=http://yoursite.com&amp;title=Your site title&amp;description=Your site description" target="_blank" title="Save to Pinboard"><img alt="Save to Pinboard" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Pinboard.png"></a></li>
+  
+  
+  <li><a href="mailto:?subject=Your site title&amp;body=Your site description:%20http://yoursite.com" target="_blank" title="Send email"><img alt="Send by email" data-silex-static="" src="/static/2.7/simplesharingbuttons/flat_web_icon_set/color/Email.png"></a></li>
+  
+</ul>
+
+<style type="text/css">#id_1608505064572_371.share-buttons {list-style: none; padding: 0;}#id_1608505064572_371.share-buttons li {display: inline;}#id_1608505064572_371.share-buttons .sr-only {position: absolute; clip: rect(1px, 1px, 1px, 1px); padding: 0; border: 0; height: 1px; width: 1px; overflow: hidden;}</style>
 </div></div></div>
     </div><div data-silex-type="html-element" class="editable-style html-element silex-id-1608504757063-12 page-page-1 paged-element silex-component-form silex-use-height-not-minheight silex-element-content-full-height" data-silex-id="silex-id-1608504757063-12" style=""><div class="silex-element-content"><form id="id_1608504757192_456" action="https://formspree.io/your@email.com" method="POST">
   
